ui fixes on mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,7 @@
 
   html {
     scroll-behavior: smooth;
+    color-scheme: light;
   }
 
   body {
@@ -130,7 +131,7 @@
   transition: top 1.3s ease-in-out;
 }
 
-
+/*
 .tab-content::-webkit-scrollbar {
   width: 0.5rem;
 }
@@ -140,7 +141,7 @@
 }
 
 .tab-content::-webkit-scrollbar-thumb {
-  /* Customize the scrollbar thumb */
   background: linear-gradient(to bottom, #a855f7, #ec4899);
   border-radius: 0.5rem;
 }
+*/
